k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zalary-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /submit
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /report
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
